# VIO

./: .gitignore  CMakeLists.txt
docs/: yaw_drift_analysis.md
include/vo/: camera.h  feature.h  frame.h  imu.h  map.h  odometry.h  optimize.h
src/: camera.cpp  capture_d435.cpp  feature.cpp  frame.cpp  imu.cpp  map.cpp  odometry.cpp  optimize.cpp
test/: CMakeLists.txt  test_camera.cpp  test_feature_tracker.cpp  test_frame_match.cpp  test_imu.cpp  test_optimize.cpp  test_vo.cpp
